<resources>
    <string name="app_name">Flow</string>
    <string name="recent_search_text">최근검색</string>
    <string name="movie_title_input_hint">영화 제목을 입력하세요.</string>
    <string name="go_to_recent_search_text">최근검색 기록 보러가기</string>
    <string name="empty_search_result_text">검색 결과가 없습니다.</string>
    <string name="retry_text">다시시도</string>
    <string name="empty_search_record_text">기록이 없습니다.</string>
    <string name="delete_search_record_text">검색기록 삭제</string>
    <string name="web_view_text">웹뷰</string>
</resources>