<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="searchViewModel"
            type="com.example.flow.ui.search.SearchViewModel" />

        <variable
            name="fragment"
            type="com.example.flow.ui.searchrecord.SearchRecordFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:onClick="@{()->fragment.moveBack()}"
            android:src="@drawable/icon_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_search_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/recent_search_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_empty_search_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_search_record_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:isEmptyList="@{searchViewModel.searchRecords}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_search_record_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_search_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_search_record_title"
            app:showList="@{searchViewModel.searchRecords}" />

        <TextView
            android:id="@+id/text_view_delete_search_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/delete_search_record_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:isNotEmptyList="@{searchViewModel.searchRecords}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_search_record" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>